PMM-13533: Set up metadata v2 for new version fields. (#332)
* setup metadata v2 endpoint

* fix tests

* update summary

* clean up makefile

* revert directory changes

* allow unknown fields

* include all files for v2

* Update server/metadata.go

* Update api/version.proto


* Update api/version.proto

* Apply suggestions from code review

---------
